# legacy-code-modernizer

./: .env.example  .gitignore  Dockerfile  FARGATE_GITHUB_GUIDE.md  GITHUB_INTEGRATION.md  MCP_CLIENT_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_TEST.md  README.md  create-ecs-service.sh  deploy.sh  docker-compose.yml  fargate-task-definition.json  main.py  pyproject.toml  start-mcp-client.sh
aws/: iam-policy.json  setup-guide.md
docs/md_files/: ARCHITECTURE_DIAGRAMS.md  BEDROCK_SUMMARY_GUIDE.md  FINAL_SUMMARY.md  GITHUB_FARGATE_SUMMARY.md  GITHUB_URL_GUIDE.md  GITHUB_URL_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_BEDROCK_QUICKREF.md  LANGCHAIN_SUMMARY_README.md  MCP_NATURAL_LANGUAGE_COMPLETE.md  MCP_SERVER_NATURAL_LANGUAGE.md  MCP_SETUP_COMPLETE.md  SERVER_INTEGRATION_SUMMARY.md  SERVER_SETUP_QUICKSTART.md  TESTING_GITHUB_URL.md
examples/: code_scout_example.py  github_integration_example.py  github_scan_example.py  langchain_bedrock_examples.py  mcp_client_interactive.py  mcp_client_stdio_example.py  mcp_client_test.py  mcp_server_usage.md  refactoring_crew_example.py  test_bedrock_summary.py  test_github_url.py
src/: __init__.py
src/agents/: code_scout.py  refactoring_crew.py
src/mcp_server/: __init__.py  http_server.py  server.py
src/utils/: config.py  github_cache.py  github_helper.py  logger.py  natural_language_formatter.py
tests/: conftest.py  test_code_scout.py  test_refactoring_crew.py
