[project]
name = "legacy-code-modernizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.5",
    "crewai>=1.7.0",
    "mcp>=1.16.0",
    "pydantic>=2.11.10",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
